--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ img {
   border: none;
   border-radius: 50px;
   transition: all 300ms ease-in;
+  font-size: 1rem;
 }
 
 .btn:hover {
@@ -120,6 +121,11 @@ img {
 
 .header-container {
   background: var(--primary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
 }
 
 .header {
@@ -131,6 +137,42 @@ img {
   height: 40px;
   border-radius: 100%;
   overflow: hidden;
+}
+
+/* navigation */
+
+.menu-btn {
+  z-index: 3;
+}
+
+.nav-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  background-color: #363b4e;
+
+  z-index: 2;
+  padding: 2em 0;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+nav a {
+  color: white;
+  display: block;
+  padding: 0.4em 1.5em;
+  text-align: right;
+  border-top: 1px solid var(--secondary);
+
+  &:first-of-type {
+    margin-top: 3em;
+  }
+
+  &:hover {
+    background: var(--accent);
+    transition: all 300ms ease-in;
+  }
 }
 
 /* main  */
@@ -311,7 +353,7 @@ img {
   border: none;
   border-radius: 4px;
   box-sizing: border-box;
-  font-size: 16px;
+  color: var(--primary);
   background: var(--secondary);
 }
 
@@ -319,11 +361,16 @@ img {
   height: 120px;
 }
 
+.sendMessage {
+  justify-content: start;
+}
+
 /* footer */
 
 .footer-wrapper {
   background: var(--primary);
   color: var(--secondary);
+  border-top: 1px solid var(--absolute);
 }
 
 /* MEDIA QUERIES */
@@ -381,6 +428,29 @@ img {
     font-size: 1.25rem;
   }
 
+  .menu-btn {
+    display: none;
+  }
+
+  .nav-container {
+    transform: translateY(0);
+    width: unset;
+    background: none;
+    display: flex;
+    padding-top: 1em;
+    padding-bottom: 0;
+    position: unset;
+    height: auto;
+  }
+
+  nav a {
+    border-top: none;
+    border-radius: 8px;
+
+    &:first-of-type {
+      margin-top: 0;
+    }
+  }
   .right-main-content .image-container {
     max-width: 400px;
     max-height: 400px;
