--- a/style.css
+++ b/style.css
@@ -126,25 +126,22 @@ img {
 
 @keyframes float2 {
   0% {
-    transform: translateY(0);
+    transform: translateY(-20px);
   }
   50% {
-    transform: translateY(-15px) rotate(5deg);
+    transform: translateY(15px);
   }
   100% {
-    transform: translateY(0) rotate(-5deg);
+    transform: translateY(-20px);
   }
 }
-
 .btn,
-.right-main-content,
-.left-about-image-container,
-.left-main-content,
-.contact-form {
+.left,
+.right {
   animation: float 3s ease-in-out infinite;
 }
 
-.right-about-content,
+.form-group,
 .portfolio-card {
   animation: float2 3s ease-in-out infinite;
 }
