--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ img {
 
 .menu-btn {
   z-index: 3;
+  background: var(--accent);
+  padding: 0.5em;
+  border-radius: 8px;
+  color: var(--primary);
 }
 
 .nav-container {
